--- a/Project Mist/Packages/manifest.json
+++ b/Project Mist/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.recorder": "5.1.2",
     "com.unity.shadergraph": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
